[gd_scene load_steps=2 format=3 uid="uid://dldeybtbfpncx"]

[ext_resource type="Script" path="res://Scripts/enemy_spawner.gd" id="1_8hen8"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_8hen8")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="Position1" type="Marker2D" parent="SpawnPositions"]
position = Vector2(70, 0)

[node name="Position2" type="Marker2D" parent="SpawnPositions"]
position = Vector2(170, 0)

[node name="Position3" type="Marker2D" parent="SpawnPositions"]
position = Vector2(270, 0)

[node name="Position4" type="Marker2D" parent="SpawnPositions"]
position = Vector2(370, 0)

[node name="Position5" type="Marker2D" parent="SpawnPositions"]
position = Vector2(470, 0)

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="PowerUpSpawnTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="PowerUpSpawnTimer" to="." method="_on_power_up_spawn_timer_timeout"]
